# Signal

./: .gitignore  CLAUDE.md  README.md
backend/: .env.example  Procfile  alembic.ini  pyproject.toml  requirements.txt  seed.py  start.py
backend/app/: config.py  main.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: briefs.py  connectors.py  orgs.py  pulse.py
backend/app/connectors/: zendesk.py
backend/app/db/: session.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 1df21e0b607b_add_clerk_id_to_users.py  3121f341f537_enable_pgvector.py  4e0e576f4929_add_pulse_fields_to_feed_items.py  c415207d3cc8_add_category_affected_count_to_insights.py  cc441d76abde_create_all_tables.py  fd09b2ab17f2_make_raw_event_id_nullable_on_evidence_.py
backend/app/models/: __init__.py  brief.py  brief_delivery.py  connector.py  evidence_ref.py  insight.py  insight_feed_item.py  oauth_credential.py  organization.py  organization_member.py  raw_event.py  sync_cursor.py  user.py
backend/workers/: brief.py  celery_app.py  cluster.py  deliver.py  embed.py  pulse.py  reason.py
docs/: Signal_Product_Research_Document.docx  Signal_Product_Research_Document.md  architecture.md  database.md  mvp-scope.md
frontend/: package-lock.json  package.json  proxy.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(app)/: layout.tsx
frontend/components/: sidebar.tsx  theme-provider.tsx  theme-toggle.tsx  touch-init.tsx
frontend/lib/: api.ts
graphify-out/: GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
(+14 files in other folders)
